--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "axios": "^1.6.8",
     "browserify-zlib": "^0.2.0",
     "buffer": "^6.0.3",
+    "country-state-city": "^3.2.1",
     "file-saver": "^2.0.5",
+    "india-pincode-lookup": "^1.0.3",
     "process": "^0.11.10",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
