--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "country-state-city": "^3.2.1",
     "file-saver": "^2.0.5",
     "india-pincode-lookup": "^1.0.3",
+    "india-pincode-search": "^1.0.2",
     "process": "^0.11.10",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
